# claude-coding-ta

./: .gitignore  CLAUDE.md  README.md
.claude/skills/bug-drill/: SKILL.md
.claude/skills/curriculum-adapter/: SKILL.md
.claude/skills/mentor-session/: SKILL.md
.claude/skills/prompt-craft/: SKILL.md
.claude/skills/quiz-master/: SKILL.md
curriculum/: ai-developer-curriculum.md  curriculum-roadmap-deck.md
docs/: index.html
progress/: adaptations.md  concepts.md  curriculum-state.md  decisions.md  journal.md  quiz-log.md  review-queue.md  struggles.md
webapp/: .gitignore  README.md  pyproject.toml
webapp/app/: __init__.py  claude_client.py  config.py  curriculum.py  gamify.py  main.py  progress.py  sessions.py
webapp/app/content/guides/: prompting-your-ai-pair.md  reading-a-diff.md  reading-a-traceback.md
webapp/app/static/css/: app.css
webapp/app/static/js/: app.js  client.js
webapp/app/static/mockups/: manifest.json
webapp/app/templates/: _parts.html  base.html  client.html  concepts.html  dashboard.html  guide.html  guides.html  mockups.html  reviews.html  session_detail.html  sessions.html  tracker.html
