[project]
name = "mentor-kit-webapp"
version = "0.1.0"
description = "Companion dashboard for the grounded vibe-coding curriculum: progress, streaks, quizzes, guides, and a Claude Code client."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown-it-py>=3.0",
]

[tool.uv]
package = false
